--- a/src/App.module.css
+++ b/src/App.module.css
@@ -35,6 +35,11 @@
     transition: all 0.2s ease;
 }
 
+.form button[type="submit"]:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+}
+
 .form button[type="submit"]:not(:disabled):hover {
     background-color: var(--blue-400);
 }
@@ -70,15 +75,16 @@
 
 .tasks {
     margin-top: 1.5rem;
-    border-top: 2px solid var(--gray-400);
-    border-radius: 8px;
 }
 
 .noTasks {
+    border-top: 2px solid var(--gray-400);
+    border-radius: 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 4rem 0;
     margin: 4rem 0;
     color: var(--gray-300);
     line-height: 1.6;
